Split documentation in "User-Level" and "Internals" part.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -236,80 +236,87 @@ development</em>.  Some information may not be applicable to any
 existing release.</p>
 
 <ul>
-  <li><a href="http://gcc.gnu.org/install/">GCC Installation Instructions</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcc/">GCC Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcc.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gcc-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gccint/">GCC Internals Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gccint.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gccint-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/g77/">G77 Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/g77-html.tar.gz">an
-         HTML tarball</a>)
-  <ul> 
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77/News.html">G77 News</a></li>
-     <li><a href="http://gcc.gnu.org/onlinedocs/g77/Trouble.html">G77 Bugs</a></li>
-  </ul>
-         </li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gcj-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/fastjar/">GNU jar utilities manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/fastjar.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/fastjar-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gnat_rm/">GNAT Reference Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gnat_rm.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gnat_rm-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx/">GNAT User's Guide
-       for Unix Platforms</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cpp/">CPP Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/cpp-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals/">CPP
-       Internals Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/cppinternals.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/cppinternals-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/porting/">libstdc++-v3
-       Porting Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/porting.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/porting-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/libiberty/">Libiberty
-      Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/libiberty.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/libiberty-html.tar.gz">an
-         HTML tarball</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/gnat-style/">GNAT
-      Coding Style Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/gnat-style.ps.gz">also in
-         PostScript</a> or <a
-         href="http://gcc.gnu.org/onlinedocs/gnat-style-html.tar.gz">an
-         HTML tarball</a>)</li>
+  <li>User-Level Documentation
+  <ul>
+    <li><a href="http://gcc.gnu.org/install/">GCC Installation Instructions</a></li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcc/">GCC Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gcc.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gcc-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/g77/">G77 Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/g77.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/g77-html.tar.gz">an
+           HTML tarball</a>)
+    <ul> 
+       <li><a href="http://gcc.gnu.org/onlinedocs/g77/News.html">G77 News</a></li>
+       <li><a href="http://gcc.gnu.org/onlinedocs/g77/Trouble.html">G77 Bugs</a></li>
+    </ul>
+           </li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gcj-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/cpp/">CPP Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/cpp-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gnat_rm/">GNAT Reference Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gnat_rm.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gnat_rm-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx/">GNAT User's Guide
+           for Unix Platforms</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gnat_ug_unx-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/fastjar/">GNU jar utilities manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/fastjar.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/fastjar-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a></li>
     <li><a href="http://gcc.gnu.org/onlinedocs/docs-sources.tar.gz">Texinfo
-         sources of all the manuals</a></li>
+           sources of all the manuals</a></li>
+  </ul></li>
+
+  <li>Internals Documentation
+  <ul>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gccint/">GCC Internals Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gccint.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gccint-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/cppinternals/">CPP
+           Internals Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/cppinternals.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/cppinternals-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/gnat-style/">GNAT
+           Coding Style Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/gnat-style.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/gnat-style-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/porting/">libstdc++-v3
+           Porting Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/porting.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/porting-html.tar.gz">an
+           HTML tarball</a>)</li>
+    <li><a href="http://gcc.gnu.org/onlinedocs/libiberty/">Libiberty
+           Manual</a> (<a
+           href="http://gcc.gnu.org/onlinedocs/libiberty.ps.gz">also in
+           PostScript</a> or <a
+           href="http://gcc.gnu.org/onlinedocs/libiberty-html.tar.gz">an
+           HTML tarball</a>)</li>
+  </ul></li>
 </ul>
 
 </body>
