* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -9,7 +9,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-05-03.
+2004-05-04.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -19,10 +19,6 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
-<tr> <td class="needsmerge">gnu.java.awt.BitwiseXORComposite</td> <td class="needsmerge"><a href="compare/gnu.java.awt.BitwiseXORComposite.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkTextAreaPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkTextAreaPeer.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.BeanInfoEmbryo</td> <td class="needsmerge"><a href="compare/gnu.java.beans.BeanInfoEmbryo.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.beans.info.ComponentBeanInfo</td> <td class="needsmerge"><a href="compare/gnu.java.beans.info.ComponentBeanInfo.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainDatagramSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainDatagramSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.PlainSocketImpl</td> <td class="needsmerge"><a href="compare/gnu.java.net.PlainSocketImpl.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.net.content.text.plain</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -35,36 +31,22 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.http.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.http.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.FileLockImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.FileLockImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.SocketChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.SocketChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.charset.UTF_16Decoder</td> <td class="needsmerge"><a href="compare/gnu.java.nio.charset.UTF_16Decoder.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.security.der.DERReader</td> <td class="needsmerge"><a href="compare/gnu.java.security.der.DERReader.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.security.der.DERWriter</td> <td class="needsmerge"><a href="compare/gnu.java.security.der.DERWriter.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.security.provider.DSAKeyPairGenerator</td> <td class="needsmerge"><a href="compare/gnu.java.security.provider.DSAKeyPairGenerator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.security.provider.DSAParameters</td> <td class="needsmerge"><a href="compare/gnu.java.security.provider.DSAParameters.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.text.AttributedFormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">gnu.java.text.CharacterBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.CharacterBreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.text.FormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.java.text.FormatCharacterIterator</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">gnu.java.text.LineBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.LineBreakIterator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.text.SentenceBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.SentenceBreakIterator.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.text.StringFormatBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">gnu.java.text.WordBreakIterator</td> <td class="needsmerge"><a href="compare/gnu.java.text.WordBreakIterator.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.util.DoubleEnumeration</td> <td class="needsmerge"><a href="compare/gnu.java.util.DoubleEnumeration.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.util.prefs.NodeReader</td> <td class="needsmerge"><a href="compare/gnu.java.util.prefs.NodeReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.applet.Applet</td> <td class="needsmerge"><a href="compare/java.applet.Applet.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Color</td> <td class="needsmerge"><a href="compare/java.awt.Color.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.ColorPaintContext</td> <td class="needsmerge"><a href="compare/java.awt.ColorPaintContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.FileDialog</td> <td class="needsmerge"><a href="compare/java.awt.FileDialog.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.SystemColor</td> <td class="needsmerge"><a href="compare/java.awt.SystemColor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.TextComponent</td> <td class="needsmerge"><a href="compare/java.awt.TextComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.ColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.ComponentSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ComponentSampleModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.BufferedReader</td> <td class="needsmerge"><a href="compare/java.io.BufferedReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.FilePermission</td> <td class="needsmerge"><a href="compare/java.io.FilePermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamField</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
@@ -74,7 +56,6 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Class</td> <td class="needsmerge"><a href="compare/java.lang.Class.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.lang.ClassLoader</td> <td class="needsmerge"><a href="compare/java.lang.ClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Double</td> <td class="needsmerge"><a href="compare/java.lang.Double.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">java.lang.EcosProcess</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Float</td> <td class="needsmerge"><a href="compare/java.lang.Float.diff">Diff</a></td> </tr>
@@ -96,12 +77,12 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.math.BigDecimal</td> <td class="needsmerge"><a href="compare/java.math.BigDecimal.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.JarURLConnection</td> <td class="needsmerge"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.net.MimeTypeMapper</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.net.NetworkInterface</td> <td class="needsmerge"><a href="compare/java.net.NetworkInterface.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
@@ -117,7 +98,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.nio.ShortBuffer</td> <td class="needsmerge"><a href="compare/java.nio.ShortBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.SecureRandom</td> <td class="needsmerge"><a href="compare/java.security.SecureRandom.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.security.Security</td> <td class="needsmerge"><a href="compare/java.security.Security.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.UnresolvedPermission</td> <td class="needsmerge"><a href="compare/java.security.UnresolvedPermission.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.interfaces.DSAKeyPairGenerator</td> <td class="needsmerge"><a href="compare/java.security.interfaces.DSAKeyPairGenerator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.interfaces.DSAPrivateKey</td> <td class="needsmerge"><a href="compare/java.security.interfaces.DSAPrivateKey.diff">Diff</a></td> </tr>
@@ -137,7 +117,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.NumberFormat</td> <td class="needsmerge"><a href="compare/java.text.NumberFormat.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.RuleBasedCollator</td> <td class="needsmerge"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.SimpleDateFormat</td> <td class="needsmerge"><a href="compare/java.text.SimpleDateFormat.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.Arrays</td> <td class="needsmerge"><a href="compare/java.util.Arrays.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Date</td> <td class="needsmerge"><a href="compare/java.util.Date.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.HashMap</td> <td class="needsmerge"><a href="compare/java.util.HashMap.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
@@ -159,7 +138,6 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.util.zip.ZipEntry</td> <td class="needsmerge"><a href="compare/java.util.zip.ZipEntry.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadProgressListener</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.event.IIOReadUpdateListener</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -295,7 +273,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.UIDefaults</td> <td class="needsmerge"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.border.TitledBorder</td> <td class="needsmerge"><a href="compare/javax.swing.border.TitledBorder.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.filechooser.FileSystemView</td> <td class="needsmerge"><a href="compare/javax.swing.filechooser.FileSystemView.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicArrowButton</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicArrowButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicCheckBoxMenuItemUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicCheckBoxMenuItemUI.diff">Diff</a></td> </tr>
@@ -309,7 +286,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSliderUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSliderUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicTabbedPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicTabbedPaneUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToggleButtonUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToggleButtonUI.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.table.DefaultTableCellRenderer</td> <td class="needsmerge"><a href="compare/javax.swing.table.DefaultTableCellRenderer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.JTableHeader</td> <td class="needsmerge"><a href="compare/javax.swing.table.JTableHeader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.table.TableColumn</td> <td class="needsmerge"><a href="compare/javax.swing.table.TableColumn.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.text.AbstractDocument</td> <td class="needsmerge"><a href="compare/javax.swing.text.AbstractDocument.diff">Diff</a></td> </tr>
