Add note about -I-.

--- a/htdocs/gcc-3.5/changes.html
+++ b/htdocs/gcc-3.5/changes.html
@@ -30,6 +30,7 @@
     <li>GCC no longer accepts the <code>-fwritable-strings</code>
         option.  Use named character arrays when you need a writable
         string.</li>
+    <li><code>-I-</code> has been deprecated.  <code>-iquote</code> is meant to replace the need for this option.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
